# work-cli

./: CLAUDE.md  Cargo.toml  build.gradle.kts  install.sh  package.json
gradle/wrapper/: gradle-wrapper.properties
src/: app.rs  cli.rs  cli.tsx  config.rs  event.rs  main.rs
src/__tests__/: agent-log.test.ts  agent-personality.test.ts  agent-store.test.ts  branch-utils.test.ts  breadcrumb-navigation.test.tsx  card-mover.test.ts  cli-rename.test.ts  dashboard.integration.test.tsx  dispatch.test.ts  github-provider.test.ts  mark-done-integration.test.tsx  mark-done.test.ts  mark-item-done.test.ts  personality.test.ts
src/agents/: agent-store.ts  branch.rs  card-mover.ts  claude-md.ts  claude-prompt.ts  claude_md.rs  claude_prompt.rs  dispatch.rs  dispatch.ts  log.rs  message.rs  mod.rs  retry.rs  store.rs
src/commands/: webhook.tsx
src/config/: config.ts
src/model/: agent.rs  agent.ts  chat.rs  mod.rs  personality.rs  personality.ts  work_item.rs
src/providers/: github.rs  jira.rs  linear.rs  mod.rs  provider.ts  registry.ts  tests.rs  trello.rs
src/providers/github/: github-provider.ts  github-types.ts
src/providers/jira/: jira-provider.ts
src/providers/linear/: linear-provider.ts
src/providers/trello/: trello-provider.ts
src/ui/: AgentPanel.tsx  App.tsx  Breadcrumb.tsx  Footer.tsx  agent_detail.rs  agent_panel.rs  chat_panel.rs  command_bar.rs  detail_panel.rs  footer.rs  item_list.rs  mod.rs  theme.rs
src/ui/hooks/: use-agents.ts  use-navigation.ts
src/util/: adf.rs  mod.rs
src/webhooks/: server.ts  webhook-dispatcher.ts
(+16 files in other folders)
