[package]
name = "work"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "work"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
dirs = "6"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
urlencoding = "2"
